css/register.css
html,
body {
    overflow: hidden;
    height: 100%;
}

.form-register {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #ffffff;
    width: 100vw;
    height: 100vh;
}

.register-back {
    background-color: rgba(35, 35, 35, 0.45);
    box-shadow: 5px 5px 15px #717171;
    color: #ffffff;
    border-radius: 15px;
}

.register-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 15px;
    padding: 30px;
    width: 400px;
    text-align: left;
}

.register-card h2 {
    text-align: center;
    margin-bottom: 20px;
}

.register-card .form-control::placeholder {
    color: #757575;
}

.register-btn {
    text-decoration: none;
    text-align: center;
    padding : 5px;
}

